--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
                                     <p>
                                         <div class="gradienttext1">Fashion & Design</div>
                                     </p>
-                                    <figcaption>Showcase your fashion and style with our 3D models, bringing your favorite trends to life.</figcaption>
+                                    <figcaption>
+                                        <p>
+                                            <div class="info1">Showcase your fashion and style with our 3D models, bringing your favorite trends to life.</div>
+                                        </p>
+                                    </figcaption>
                                 </figure>
                             </div>
                         </div>
@@ -42,7 +46,11 @@
                                     <p>
                                         <div class="gradienttext2">Furniture & Home</div>
                                     </p>
-                                    <figcaption>Transform your living space with our 3D models, offering a detailed look at stylish and functional furniture for your home.</figcaption>
+                                    <figcaption>
+                                        <p>
+                                            <div class="info2">Transform your living space with our 3D models, offering a detailed look at stylish and functional furniture for your home.</div>
+                                        </p>
+                                    </figcaption>
                                 </figure>
                             </div>
                         </div>
@@ -58,7 +66,11 @@
                                     <p>
                                         <div class="gradienttext3">Architecture & Design</div>
                                     </p>
-                                    <figcaption>Explore architectural designs in stunning detail with our 3D models, perfect for visualizing your dream projects.</figcaption>
+                                    <figcaption>
+                                        <p>
+                                            <div class="info3">Explore architectural designs in stunning detail with our 3D models, perfect for visualizing your dream projects.</div>
+                                        </p>
+                                    </figcaption>
                                 </figure>
                             </div>
                         </div>
