--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                                             <div class="info1">Showcase your fashion and style with our 3D models, bringing your favorite trends to life.</div>
                                         </p>
                                     </figcaption>
+                                    <div class="button">
+                                        <div class="buttontext">Learn More</div>
+                                    </div>
                                 </figure>
                             </div>
                         </div>
@@ -51,6 +54,9 @@
                                             <div class="info2">Transform your living space with our 3D models, offering a detailed look at stylish and functional furniture for your home.</div>
                                         </p>
                                     </figcaption>
+                                    <div class="button2">
+                                        <div class="buttontext">Learn More</div>
+                                    </div>
                                 </figure>
                             </div>
                         </div>
@@ -71,6 +77,9 @@
                                             <div class="info3">Explore architectural designs in stunning detail with our 3D models, perfect for visualizing your dream projects.</div>
                                         </p>
                                     </figcaption>
+                                    <div class="button">
+                                        <div class="buttontext">Learn More</div>
+                                    </div>
                                 </figure>
                             </div>
                         </div>
