--- a/project2/index.html
+++ b/project2/index.html
@@ -18,7 +18,7 @@
                             allowfullscreen="allowfullscreen"></iframe>
                         <figure>
                             <p>
-                                <div class="gradienttext1">Fashion & Design</div>
+                                <div class="gradienttext1">Fashion & Style</div>
                             </p>
                             <figcaption>
                                 <p>
@@ -36,7 +36,7 @@
             <label class="card" for="item-2" id="slide-2">
             <div class="flex-container">
                 <div class="flex-box">
-                    <div class="iframe-container-reverse">
+                    <div class="iframe-container">
                         <iframe src="https://embed.3dprobox.com/models/uuKvAjZbS7ReVPAscCezmq7t?autoload=true&amp;info_buttons=true" title="3D ProBox Model Viewer" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin"
                             allowfullscreen="allowfullscreen"></iframe>
                         <figure>
@@ -48,7 +48,7 @@
                                     <div class="info2">Transform your living space with our 3D models, offering a detailed look at stylish and functional furniture for your home.</div>
                                 </p>
                             </figcaption>
-                            <div class="button2">
+                            <div class="button">
                                 <div class="buttontext">Learn More</div>
                             </div>
                         </figure>
