--- a/project2/index.html
+++ b/project2/index.html
@@ -25,10 +25,8 @@
                                     <div class="info1">Showcase your fashion and style with our 3D models, bringing your favorite trends to life.</div>
                                 </p>
                             </figcaption>
-                            <div class="button">
-                                <div class="buttontext">Learn More</div>
-                            </div>
                         </figure>
+                        <a href="#" style="--clr:#FFD350"><span>Learn More</span></a>
                     </div>
                 </div>
             </div>
@@ -48,10 +46,8 @@
                                     <div class="info2">Transform your living space with our 3D models, offering a detailed look at stylish and functional furniture for your home.</div>
                                 </p>
                             </figcaption>
-                            <div class="button">
-                                <div class="buttontext">Learn More</div>
-                            </div>
                         </figure>
+                        <a href="#" style="--clr:#FFD350"><span>Learn More</span></a>
                     </div>
                 </div>
             </div>
@@ -71,10 +67,8 @@
                                     <div class="info3">Explore architectural designs in stunning detail with our 3D models, perfect for visualizing your dream projects.</div>
                                 </p>
                             </figcaption>
-                            <div class="button">
-                                <div class="buttontext">Learn More</div>
-                            </div>
                         </figure>
+                        <a href="#" style="--clr:#FFD350"><span>Learn More</span></a>
                     </div>
                 </div>
             </div>
