--- a/project2/index.html
+++ b/project2/index.html
@@ -26,7 +26,7 @@
                                 </p>
                             </figcaption>
                         </figure>
-                        <a href="#" style="--clr:#FFD350"><span>Learn More</span></a>
+                        <a href="https://3dprobox.com/features" style="--clr:#FFD350"><span>Learn More</span></a>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                                 </p>
                             </figcaption>
                         </figure>
-                        <a href="#" style="--clr:#FFD350"><span>Learn More</span></a>
+                        <a href="https://3dprobox.com/features" style="--clr:#FFD350"><span>Learn More</span></a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                                 </p>
                             </figcaption>
                         </figure>
-                        <a href="#" style="--clr:#FFD350"><span>Learn More</span></a>
+                        <a href="https://3dprobox.com/features" style="--clr:#FFD350"><span>Learn More</span></a>
                     </div>
                 </div>
             </div>
