--- a/project2/index.html
+++ b/project2/index.html
@@ -14,8 +14,7 @@
             <div class="flex-container">
                 <div class="flex-box">
                     <div class="iframe-container">
-                        <iframe src="https://embed.3dprobox.com/models/uuKvAjZbS7ReVPAscCezmq7t?autoload=true&amp;info_buttons=true" title="3D ProBox Model Viewer" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin"
-                            allowfullscreen="allowfullscreen"></iframe>
+                        <iframe src="https://embed.3dprobox.com/models/B5E7CJBrUGxN6DEedv9LwguE?info_buttons=true"></iframe>
                         <figure>
                             <p>
                                 <div class="gradienttext1">Fashion & Style</div>
@@ -35,8 +34,7 @@
             <div class="flex-container">
                 <div class="flex-box">
                     <div class="iframe-container">
-                        <iframe src="https://embed.3dprobox.com/models/uuKvAjZbS7ReVPAscCezmq7t?autoload=true&amp;info_buttons=true" title="3D ProBox Model Viewer" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin"
-                            allowfullscreen="allowfullscreen"></iframe>
+                        <iframe src="https://embed.3dprobox.com/models/zKWumG56ZTzdN2yVCnDuugYS?info_buttons=true"></iframe>
                         <figure>
                             <p>
                                 <div class="gradienttext2">Furniture & Home</div>
@@ -56,8 +54,7 @@
             <div class="flex-container">
                 <div class="flex-box">
                     <div class="iframe-container">
-                        <iframe src="https://embed.3dprobox.com/models/uuKvAjZbS7ReVPAscCezmq7t?autoload=true&amp;info_buttons=true" title="3D ProBox Model Viewer" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin"
-                            allowfullscreen="allowfullscreen"></iframe>
+                        <iframe src="https://embed.3dprobox.com/models/TqH4t5d7PzS4jMLivdaQ4NSm?info_buttons=true"></iframe>
                         <figure>
                             <p>
                                 <div class="gradienttext3">Architecture & Design</div>
